# KI-Energie-Hackathon-Project

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  i18n.py  main.py
backend/app/data/: grid_operators.yaml  pv_components.yaml  yield_factors.yaml
backend/app/demo/: cached_answers.json
backend/app/knowledge/: loader.py
backend/app/knowledge/rules/: building_metering_funding.yaml  expansion.yaml  grid.yaml  pv.yaml
backend/app/models/: __init__.py
backend/app/services/: answer.py  assessment.py  configurator.py  geo.py  ingest.py  langchain_agent.py  llm.py  logbook.py  retrieval.py  vision.py
backend/eval/: eval_answers.py  gold_answers.json
backend/scripts/: smoke_llm.py
backend/tests/: conftest.py  test_answer.py  test_assessment.py  test_configurator.py  test_geo.py  test_i18n.py  test_retrieval.py
docs/: architecture.md  credits.md  demo-script.md  evaluation-guide.md  ingestion_sample.txt  manual-answer-check.md  sources.md  spec.md  test-inputs.json
docs/challenge/Challange 3/: Consultation Process and Planning of a PV System.docx
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/solar/: route.ts
frontend/app/onepager/: page.tsx
frontend/components/: AnswerView.tsx  ChatBot.tsx  ConfigPanel.tsx  HouseDiagram.tsx  MapInner.tsx  MapView.tsx  RoofVisionPanel.tsx  SolarMap.tsx  SourcePanel.tsx  ui.tsx
frontend/lib/: api.ts  i18n.ts  solar.ts  types.ts
frontend/public/images/: roof_photo.jfif
